src/gaen/compose/compose_parser.output
Terminals unused in grammar

    SWITCH
    CASE
    BREAK
    VALUE
    '['
    ']'


State 19 conflicts: 1 shift/reduce


Grammar

    0 $accept: cmp_file $end

    1 cmp_file: def_list
    2         | using_list def_list

    3 using_list: using_stmt
    4           | using_list using_stmt

    5 using_stmt: USING dotted_id AS dotted_id ';'

    6 dotted_id: dotted_id_proc

    7 dotted_id_proc: dotted_id_part
    8               | dotted_id '.' dotted_id_part

    9 dotted_id_part: IDENTIFIER

   10 def_list: def
   11         | def_list def

   12 def: ENTITY IDENTIFIER message_block
   13    | COMPONENT IDENTIFIER message_block
   14    | function_def
   15    | const_type IDENTIFIER '=' expr ';'

   16 message_block: '{' '}'
   17              | '{' message_list '}'

   18 message_list: message_prop
   19             | message_list message_prop

   20 message_prop: HASH '(' param_list ')' block
   21             | property_decl property_block
   22             | property_decl '=' expr ';'
   23             | property_decl ';'
   24             | type_ent_handle_asset IDENTIFIER '=' expr ';'
   25             | type_ent_handle_asset IDENTIFIER ';'
   26             | COMPONENTS component_block
   27             | UPDATE block
   28             | INPUT_ HASH input_block
   29             | function_def

   30 function_def: type_ent_handle_asset IDENTIFIER '(' param_list ')' block

   31 param_list: %empty
   32           | type_ent_handle_asset IDENTIFIER
   33           | param_list ',' type_ent_handle_asset IDENTIFIER

   34 component_block: '{' '}'
   35                | '{' component_member_list '}'

   36 component_member_list: component_member
   37                      | component_member_list ',' component_member

   38 component_member: dotted_id
   39                 | dotted_id '{' prop_init_list '}'

   40 prop_init_list: %empty
   41               | prop_init
   42               | prop_init_list ',' prop_init

   43 prop_init: IDENTIFIER '=' expr
   44          | TRANSFORM '=' expr
   45          | READY '=' expr
   46          | PARENT '=' expr
   47          | VISIBLE '=' expr

   48 property_decl: type_ent_handle_asset HASH

   49 property_block: '{' '}'
   50               | '{' property_def_list '}'

   51 property_def_list: property_def
   52                  | property_def_list property_def

   53 property_def: DEFAULT '=' expr ';'
   54             | PRE block
   55             | POST block

   56 input_block: '{' '}'
   57            | '{' input_def_list '}'

   58 input_def_list: input_def
   59               | input_def_list input_def

   60 input_def: HASH block
   61          | HASH ':' FLOAT_LITERAL block
   62          | ANY block
   63          | NONE block

   64 block: '{' '}'
   65      | '{' stmt_list '}'

   66 stmt_list: stmt
   67          | stmt_list stmt

   68 stmt: IF '(' expr ')' stmt
   69     | IF '(' expr ')' stmt ELSE stmt
   70     | WHILE '(' expr ')' stmt
   71     | DO stmt WHILE '(' expr ')' ';'
   72     | FOR '(' expr_or_empty ';' cond_expr_or_empty ';' expr_or_empty ')' stmt
   73     | '@' target_expr HASH '=' expr ';'
   74     | '@' target_expr HASH '(' fun_params ')' ';'
   75     | '@' target_expr ':' message_expr '=' expr ';'
   76     | '@' target_expr ':' message_expr '(' fun_params ')' ';'
   77     | RETURN expr ';'
   78     | block
   79     | expr ';'

   80 target_expr: %empty
   81            | IDENTIFIER
   82            | SELF
   83            | CREATOR
   84            | RENDERER
   85            | INT_LITERAL
   86            | PARENT

   87 message_expr: IDENTIFIER
   88             | SELF
   89             | INT_LITERAL
   90             | '(' expr ')'

   91 expr: '(' expr ')'
   92     | type_ent IDENTIFIER
   93     | type_ent IDENTIFIER '=' expr
   94     | cond_expr
   95     | STRING_LITERAL
   96     | literal
   97     | expr '+' expr
   98     | expr '-' expr
   99     | expr '*' expr
  100     | expr '/' expr
  101     | expr '%' expr
  102     | expr LSHIFT expr
  103     | expr RSHIFT expr
  104     | expr OR expr
  105     | expr AND expr
  106     | expr '|' expr
  107     | expr '^' expr
  108     | expr '&' expr
  109     | dotted_id '=' expr
  110     | dotted_id ADD_ASSIGN expr
  111     | dotted_id SUB_ASSIGN expr
  112     | dotted_id MUL_ASSIGN expr
  113     | dotted_id DIV_ASSIGN expr
  114     | dotted_id MOD_ASSIGN expr
  115     | dotted_id LSHIFT_ASSIGN expr
  116     | dotted_id RSHIFT_ASSIGN expr
  117     | dotted_id AND_ASSIGN expr
  118     | dotted_id XOR_ASSIGN expr
  119     | dotted_id OR_ASSIGN expr
  120     | '!' expr
  121     | '~' expr
  122     | '-' expr
  123     | HASH
  124     | INC expr
  125     | DEC expr
  126     | expr INC
  127     | expr DEC
  128     | basic_type '{' fun_params '}'
  129     | dotted_id '{' prop_init_list '}'
  130     | dotted_id '(' fun_params ')'
  131     | '$' '.' IDENTIFIER
  132     | '$' '.' IDENTIFIER '(' fun_params ')'
  133     | TRANSFORM
  134     | SELF
  135     | CREATOR
  136     | SOURCE

  137 cond_expr: expr EQ expr
  138          | expr NEQ expr
  139          | expr LTE expr
  140          | expr GTE expr
  141          | expr '<' expr
  142          | expr '>' expr
  143          | dotted_id

  144 literal: INT_LITERAL
  145        | FLOAT_LITERAL
  146        | TRUE_
  147        | FALSE_

  148 expr_or_empty: %empty
  149              | expr

  150 cond_expr_or_empty: %empty
  151                   | cond_expr

  152 fun_params: %empty
  153           | expr
  154           | fun_params ',' expr

  155 type: basic_type
  156     | dotted_id

  157 const_type: CONST_ constable_type

  158 basic_type: VOID_
  159           | STRING
  160           | constable_type

  161 constable_type: BOOL_
  162               | INT_
  163               | FLOAT_
  164               | COLOR
  165               | VEC2
  166               | VEC3
  167               | VEC4
  168               | IVEC2
  169               | IVEC3
  170               | IVEC4
  171               | QUAT
  172               | MAT3
  173               | MAT43
  174               | MAT4

  175 type_ent: type
  176         | ENTITY

  177 type_ent_handle_asset: type_ent
  178                      | HANDLE_
  179                      | ASSET


Terminals, with rules where they appear

    $end (0) 0
    '!' <pAst> (33) 120
    '$' (36) 131 132
    '%' <pAst> (37) 101
    '&' <pAst> (38) 108
    '(' (40) 20 30 68 69 70 71 72 74 76 90 91 130 132
    ')' (41) 20 30 68 69 70 71 72 74 76 90 91 130 132
    '*' <pAst> (42) 99
    '+' <pAst> (43) 97
    ',' (44) 33 37 42 154
    '-' <pAst> (45) 98 122
    '.' <pAst> (46) 8 131 132
    '/' <pAst> (47) 100
    ':' (58) 61 75 76
    ';' (59) 5 15 22 23 24 25 53 71 72 73 74 75 76 77 79
    '<' <pAst> (60) 141
    '=' <pAst> (61) 15 22 24 43 44 45 46 47 53 73 75 93 109
    '>' <pAst> (62) 142
    '@' (64) 73 74 75 76
    '[' (91)
    ']' (93)
    '^' <pAst> (94) 107
    '{' (123) 16 17 34 35 39 49 50 56 57 64 65 128 129
    '|' <pAst> (124) 106
    '}' (125) 16 17 34 35 39 49 50 56 57 64 65 128 129
    '~' <pAst> (126) 121
    error (256)
    IDENTIFIER <str> (258) 9 12 13 15 24 25 30 32 33 43 81 87 92 93 131 132
    HASH <str> (259) 20 28 48 60 61 73 74 123
    STRING_LITERAL <str> (260) 95
    INT_LITERAL <numi> (261) 85 89 144
    TRUE_ <numi> (262) 146
    FALSE_ <numi> (263) 147
    FLOAT_LITERAL <numf> (264) 61 145
    VOID_ <dataType> (265) 158
    BOOL_ <dataType> (266) 161
    INT_ <dataType> (267) 162
    FLOAT_ <dataType> (268) 163
    COLOR <dataType> (269) 164
    VEC2 <dataType> (270) 165
    VEC3 <dataType> (271) 166
    VEC4 <dataType> (272) 167
    IVEC2 <dataType> (273) 168
    IVEC3 <dataType> (274) 169
    IVEC4 <dataType> (275) 170
    QUAT <dataType> (276) 171
    MAT3 <dataType> (277) 172
    MAT43 <dataType> (278) 173
    MAT4 <dataType> (279) 174
    HANDLE_ <dataType> (280) 178
    ASSET <dataType> (281) 179
    ENTITY <dataType> (282) 12 176
    STRING <dataType> (283) 159
    IF (284) 68 69
    SWITCH (285)
    CASE (286)
    DEFAULT (287) 53
    FOR (288) 72
    WHILE (289) 70 71
    DO (290) 71
    BREAK (291)
    RETURN (292) 77
    COMPONENT (293) 13
    COMPONENTS (294) 26
    UPDATE (295) 27
    INPUT_ (296) 28
    ANY (297) 62
    NONE (298) 63
    USING (299) 5
    AS (300) 5
    CONST_ (301) 157
    SELF (302) 82 88 134
    CREATOR (303) 83 135
    PRE (304) 54
    POST (305) 55
    VALUE (306)
    RENDERER (307) 84
    SOURCE (308) 136
    ELSE (309) 69
    THEN (310)
    ADD_ASSIGN <pAst> (311) 110
    SUB_ASSIGN <pAst> (312) 111
    MUL_ASSIGN <pAst> (313) 112
    DIV_ASSIGN <pAst> (314) 113
    MOD_ASSIGN <pAst> (315) 114
    LSHIFT_ASSIGN <pAst> (316) 115
    RSHIFT_ASSIGN <pAst> (317) 116
    AND_ASSIGN <pAst> (318) 117
    XOR_ASSIGN <pAst> (319) 118
    OR_ASSIGN <pAst> (320) 119
    TRANSFORM <pAst> (321) 44 133
    READY <pAst> (322) 45
    PARENT <pAst> (323) 46 86
    VISIBLE <pAst> (324) 47
    OR <pAst> (325) 104
    AND <pAst> (326) 105
    EQ <pAst> (327) 137
    NEQ <pAst> (328) 138
    LTE <pAst> (329) 139
    GTE <pAst> (330) 140
    LSHIFT <pAst> (331) 102
    RSHIFT <pAst> (332) 103
    INC <pAst> (333) 124 126
    DEC <pAst> (334) 125 127
    UMINUS <pAst> (335)
    POSTINC (336)
    POSTDEC (337)


Nonterminals, with rules where they appear

    $accept (108)
        on left: 0
    cmp_file (109)
        on left: 1 2
        on right: 0
    using_list <pAst> (110)
        on left: 3 4
        on right: 2 4
    using_stmt <pAst> (111)
        on left: 5
        on right: 3 4
    dotted_id <pAst> (112)
        on left: 6
        on right: 5 8 38 39 109 110 111 112 113 114 115 116 117 118 119 129 130 143 156
    dotted_id_proc <pAst> (113)
        on left: 7 8
        on right: 6
    dotted_id_part <pAst> (114)
        on left: 9
        on right: 7 8
    def_list (115)
        on left: 10 11
        on right: 1 2 11
    def <pAst> (116)
        on left: 12 13 14 15
        on right: 10 11
    message_block <pAst> (117)
        on left: 16 17
        on right: 12 13
    message_list <pAst> (118)
        on left: 18 19
        on right: 17 19
    message_prop <pAst> (119)
        on left: 20 21 22 23 24 25 26 27 28 29
        on right: 18 19
    function_def <pAst> (120)
        on left: 30
        on right: 14 29
    param_list <pSymTab> (121)
        on left: 31 32 33
        on right: 20 30 33
    component_block <pAst> (122)
        on left: 34 35
        on right: 26
    component_member_list <pAst> (123)
        on left: 36 37
        on right: 35 37
    component_member <pAst> (124)
        on left: 38 39
        on right: 36 37
    prop_init_list <pAst> (125)
        on left: 40 41 42
        on right: 39 42 129
    prop_init <pAst> (126)
        on left: 43 44 45 46 47
        on right: 41 42
    property_decl <pAst> (127)
        on left: 48
        on right: 21 22 23
    property_block <pAst> (128)
        on left: 49 50
        on right: 21
    property_def_list <pAst> (129)
        on left: 51 52
        on right: 50 52
    property_def <pAst> (130)
        on left: 53 54 55
        on right: 51 52
    input_block <pAst> (131)
        on left: 56 57
        on right: 28
    input_def_list <pAst> (132)
        on left: 58 59
        on right: 57 59
    input_def <pAst> (133)
        on left: 60 61 62 63
        on right: 58 59
    block <pAst> (134)
        on left: 64 65
        on right: 20 27 30 54 55 60 61 62 63 78
    stmt_list <pAst> (135)
        on left: 66 67
        on right: 65 67
    stmt <pAst> (136)
        on left: 68 69 70 71 72 73 74 75 76 77 78 79
        on right: 66 67 68 69 70 71 72
    target_expr <pAst> (137)
        on left: 80 81 82 83 84 85 86
        on right: 73 74 75 76
    message_expr <pAst> (138)
        on left: 87 88 89 90
        on right: 75 76
    expr <pAst> (139)
        on left: 91 92 93 94 95 96 97 98 99 100 101 102 103 104 105 106 107 108 109 110 111 112 113 114 115 116 117 118 119 120 121 122 123 124 125 126 127 128 129 130 131 132 133 134 135 136
        on right: 15 22 24 43 44 45 46 47 53 68 69 70 71 73 75 77 79 90 91 93 97 98 99 100 101 102 103 104 105 106 107 108 109 110 111 112 113 114 115 116 117 118 119 120 121 122 124 125 126 127 137 138 139 140 141 142 149 153 154
    cond_expr <pAst> (140)
        on left: 137 138 139 140 141 142 143
        on right: 94 151
    literal <pAst> (141)
        on left: 144 145 146 147
        on right: 96
    expr_or_empty <pAst> (142)
        on left: 148 149
        on right: 72
    cond_expr_or_empty <pAst> (143)
        on left: 150 151
        on right: 72
    fun_params <pAst> (144)
        on left: 152 153 154
        on right: 74 76 128 130 132 154
    type <pSymDataType> (145)
        on left: 155 156
        on right: 175
    const_type <pSymDataType> (146)
        on left: 157
        on right: 15
    basic_type <dataType> (147)
        on left: 158 159 160
        on right: 128 155
    constable_type <dataType> (148)
        on left: 161 162 163 164 165 166 167 168 169 170 171 172 173 174
        on right: 157 160
    type_ent <pSymDataType> (149)
        on left: 175 176
        on right: 92 93 177
    type_ent_handle_asset <pSymDataType> (150)
        on left: 177 178 179
        on right: 24 25 30 32 33 48


State 0

    0 $accept: . cmp_file $end

    IDENTIFIER  shift, and go to state 1
    VOID_       shift, and go to state 2
    BOOL_       shift, and go to state 3
    INT_        shift, and go to state 4
    FLOAT_      shift, and go to state 5
    COLOR       shift, and go to state 6
    VEC2        shift, and go to state 7
    VEC3        shift, and go to state 8
    VEC4        shift, and go to state 9
    IVEC2       shift, and go to state 10
    IVEC3       shift, and go to state 11
    IVEC4       shift, and go to state 12
    QUAT        shift, and go to state 13
    MAT3        shift, and go to state 14
    MAT43       shift, and go to state 15
    MAT4        shift, and go to state 16
    HANDLE_     shift, and go to state 17
    ASSET       shift, and go to state 18
    ENTITY      shift, and go to state 19
    STRING      shift, and go to state 20
    COMPONENT   shift, and go to state 21
    USING       shift, and go to state 22
    CONST_      shift, and go to state 23

    cmp_file               go to state 24
    using_list             go to state 25
    using_stmt             go to state 26
    dotted_id              go to state 27
    dotted_id_proc         go to state 28
    dotted_id_part         go to state 29
    def_list               go to state 30
    def                    go to state 31
    function_def           go to state 32
    type                   go to state 33
    const_type             go to state 34
    basic_type             go to state 35
    constable_type         go to state 36
    type_ent               go to state 37
    type_ent_handle_asset  go to state 38


State 1

    9 dotted_id_part: IDENTIFIER .

    $default  reduce using rule 9 (dotted_id_part)


State 2

  158 basic_type: VOID_ .

    $default  reduce using rule 158 (basic_type)


State 3

  161 constable_type: BOOL_ .

    $default  reduce using rule 161 (constable_type)


State 4

  162 constable_type: INT_ .

    $default  reduce using rule 162 (constable_type)


State 5

  163 constable_type: FLOAT_ .

    $default  reduce using rule 163 (constable_type)


State 6

  164 constable_type: COLOR .

    $default  reduce using rule 164 (constable_type)


State 7

  165 constable_type: VEC2 .

    $default  reduce using rule 165 (constable_type)


State 8

  166 constable_type: VEC3 .

    $default  reduce using rule 166 (constable_type)


State 9

  167 constable_type: VEC4 .

    $default  reduce using rule 167 (constable_type)


State 10

  168 constable_type: IVEC2 .

    $default  reduce using rule 168 (constable_type)


State 11

  169 constable_type: IVEC3 .

    $default  reduce using rule 169 (constable_type)


State 12

  170 constable_type: IVEC4 .

    $default  reduce using rule 170 (constable_type)


State 13

  171 constable_type: QUAT .

    $default  reduce using rule 171 (constable_type)


State 14

  172 constable_type: MAT3 .

    $default  reduce using rule 172 (constable_type)


State 15

  173 constable_type: MAT43 .

    $default  reduce using rule 173 (constable_type)


State 16

  174 constable_type: MAT4 .

    $default  reduce using rule 174 (constable_type)


State 17

  178 type_ent_handle_asset: HANDLE_ .

    $default  reduce using rule 178 (type_ent_handle_asset)


State 18

  179 type_ent_handle_asset: ASSET .

    $default  reduce using rule 179 (type_ent_handle_asset)


State 19

   12 def: ENTITY . IDENTIFIER message_block
  176 type_ent: ENTITY .

    IDENTIFIER  shift, and go to state 39

    IDENTIFIER  [reduce using rule 176 (type_ent)]


State 20

  159 basic_type: STRING .

    $default  reduce using rule 159 (basic_type)


State 21

   13 def: COMPONENT . IDENTIFIER message_block

    IDENTIFIER  shift, and go to state 40


State 22

    5 using_stmt: USING . dotted_id AS dotted_id ';'

    IDENTIFIER  shift, and go to state 1

    dotted_id       go to state 41
    dotted_id_proc  go to state 28
    dotted_id_part  go to state 29


State 23

  157 const_type: CONST_ . constable_type

    BOOL_   shift, and go to state 3
    INT_    shift, and go to state 4
    FLOAT_  shift, and go to state 5
    COLOR   shift, and go to state 6
    VEC2    shift, and go to state 7
    VEC3    shift, and go to state 8
    VEC4    shift, and go to state 9
    IVEC2   shift, and go to state 10
    IVEC3   shift, and go to state 11
    IVEC4   shift, and go to state 12
    QUAT    shift, and go to state 13
    MAT3    shift, and go to state 14
    MAT43   shift, and go to state 15
    MAT4    shift, and go to state 16

    constable_type  go to state 42


State 24

    0 $accept: cmp_file . $end

    $end  shift, and go to state 43


State 25

    2 cmp_file: using_list . def_list
    4 using_list: using_list . using_stmt

    IDENTIFIER  shift, and go to state 1
    VOID_       shift, and go to state 2
    BOOL_       shift, and go to state 3
    INT_        shift, and go to state 4
    FLOAT_      shift, and go to state 5
    COLOR       shift, and go to state 6
    VEC2        shift, and go to state 7
    VEC3        shift, and go to state 8
    VEC4        shift, and go to state 9
    IVEC2       shift, and go to state 10
    IVEC3       shift, and go to state 11
    IVEC4       shift, and go to state 12
    QUAT        shift, and go to state 13
    MAT3        shift, and go to state 14
    MAT43       shift, and go to state 15
    MAT4        shift, and go to state 16
    HANDLE_     shift, and go to state 17
    ASSET       shift, and go to state 18
    ENTITY      shift, and go to state 19
    STRING      shift, and go to state 20
    COMPONENT   shift, and go to state 21
    USING       shift, and go to state 22
    CONST_      shift, and go to state 23

    using_stmt             go to state 44
    dotted_id              go to state 27
    dotted_id_proc         go to state 28
    dotted_id_part         go to state 29
    def_list               go to state 45
    def                    go to state 31
    function_def           go to state 32
    type                   go to state 33
    const_type             go to state 34
    basic_type             go to state 35
    constable_type         go to state 36
    type_ent               go to state 37
    type_ent_handle_asset  go to state 38


State 26

    3 using_list: using_stmt .

    $default  reduce using rule 3 (using_list)


State 27

    8 dotted_id_proc: dotted_id . '.' dotted_id_part
  156 type: dotted_id .

    '.'  shift, and go to state 46

    $default  reduce using rule 156 (type)


State 28

    6 dotted_id: dotted_id_proc .

    $default  reduce using rule 6 (dotted_id)


State 29

    7 dotted_id_proc: dotted_id_part .

    $default  reduce using rule 7 (dotted_id_proc)


State 30

    1 cmp_file: def_list .
   11 def_list: def_list . def

    IDENTIFIER  shift, and go to state 1
    VOID_       shift, and go to state 2
    BOOL_       shift, and go to state 3
    INT_        shift, and go to state 4
    FLOAT_      shift, and go to state 5
    COLOR       shift, and go to state 6
    VEC2        shift, and go to state 7
    VEC3        shift, and go to state 8
    VEC4        shift, and go to state 9
    IVEC2       shift, and go to state 10
    IVEC3       shift, and go to state 11
    IVEC4       shift, and go to state 12
    QUAT        shift, and go to state 13
    MAT3        shift, and go to state 14
    MAT43       shift, and go to state 15
    MAT4        shift, and go to state 16
    HANDLE_     shift, and go to state 17
    ASSET       shift, and go to state 18
    ENTITY      shift, and go to state 19
    STRING      shift, and go to state 20
    COMPONENT   shift, and go to state 21
    CONST_      shift, and go to state 23

    $default  reduce using rule 1 (cmp_file)

    dotted_id              go to state 27
    dotted_id_proc         go to state 28
    dotted_id_part         go to state 29
    def                    go to state 47
    function_def           go to state 32
    type                   go to state 33
    const_type             go to state 34
    basic_type             go to state 35
    constable_type         go to state 36
    type_ent               go to state 37
    type_ent_handle_asset  go to state 38


State 31

   10 def_list: def .

    $default  reduce using rule 10 (def_list)


State 32

   14 def: function_def .

    $default  reduce using rule 14 (def)


State 33

  175 type_ent: type .

    $default  reduce using rule 175 (type_ent)


State 34

   15 def: const_type . IDENTIFIER '=' expr ';'

    IDENTIFIER  shift, and go to state 48


State 35

  155 type: basic_type .

    $default  reduce using rule 155 (type)


State 36

  160 basic_type: constable_type .

    $default  reduce using rule 160 (basic_type)


State 37

  177 type_ent_handle_asset: type_ent .

    $default  reduce using rule 177 (type_ent_handle_asset)


State 38

   30 function_def: type_ent_handle_asset . IDENTIFIER '(' param_list ')' block

    IDENTIFIER  shift, and go to state 49


State 39

   12 def: ENTITY IDENTIFIER . message_block

    '{'  shift, and go to state 50

    message_block  go to state 51


State 40

   13 def: COMPONENT IDENTIFIER . message_block

    '{'  shift, and go to state 50

    message_block  go to state 52


State 41

    5 using_stmt: USING dotted_id . AS dotted_id ';'
    8 dotted_id_proc: dotted_id . '.' dotted_id_part

    AS   shift, and go to state 53
    '.'  shift, and go to state 46


State 42

  157 const_type: CONST_ constable_type .

    $default  reduce using rule 157 (const_type)


State 43

    0 $accept: cmp_file $end .

    $default  accept


State 44

    4 using_list: using_list using_stmt .

    $default  reduce using rule 4 (using_list)


State 45

    2 cmp_file: using_list def_list .
   11 def_list: def_list . def

    IDENTIFIER  shift, and go to state 1
    VOID_       shift, and go to state 2
    BOOL_       shift, and go to state 3
    INT_        shift, and go to state 4
    FLOAT_      shift, and go to state 5
    COLOR       shift, and go to state 6
    VEC2        shift, and go to state 7
    VEC3        shift, and go to state 8
    VEC4        shift, and go to state 9
    IVEC2       shift, and go to state 10
    IVEC3       shift, and go to state 11
    IVEC4       shift, and go to state 12
    QUAT        shift, and go to state 13
    MAT3        shift, and go to state 14
    MAT43       shift, and go to state 15
    MAT4        shift, and go to state 16
    HANDLE_     shift, and go to state 17
    ASSET       shift, and go to state 18
    ENTITY      shift, and go to state 19
    STRING      shift, and go to state 20
    COMPONENT   shift, and go to state 21
    CONST_      shift, and go to state 23

    $default  reduce using rule 2 (cmp_file)

    dotted_id              go to state 27
    dotted_id_proc         go to state 28
    dotted_id_part         go to state 29
    def                    go to state 47
    function_def           go to state 32
    type                   go to state 33
    const_type             go to state 34
    basic_type             go to state 35
    constable_type         go to state 36
    type_ent               go to state 37
    type_ent_handle_asset  go to state 38


State 46

    8 dotted_id_proc: dotted_id '.' . dotted_id_part

    IDENTIFIER  shift, and go to state 1

    dotted_id_part  go to state 54


State 47

   11 def_list: def_list def .

    $default  reduce using rule 11 (def_list)


State 48

   15 def: const_type IDENTIFIER . '=' expr ';'

    '='  shift, and go to state 55


State 49

   30 function_def: type_ent_handle_asset IDENTIFIER . '(' param_list ')' block

    '('  shift, and go to state 56


State 50

   16 message_block: '{' . '}'
   17              | '{' . message_list '}'

    IDENTIFIER  shift, and go to state 1
    HASH        shift, and go to state 57
    VOID_       shift, and go to state 2
    BOOL_       shift, and go to state 3
    INT_        shift, and go to state 4
    FLOAT_      shift, and go to state 5
    COLOR       shift, and go to state 6
    VEC2        shift, and go to state 7
    VEC3        shift, and go to state 8
    VEC4        shift, and go to state 9
    IVEC2       shift, and go to state 10
    IVEC3       shift, and go to state 11
    IVEC4       shift, and go to state 12
    QUAT        shift, and go to state 13
    MAT3        shift, and go to state 14
    MAT43       shift, and go to state 15
    MAT4        shift, and go to state 16
    HANDLE_     shift, and go to state 17
    ASSET       shift, and go to state 18
    ENTITY      shift, and go to state 58
    STRING      shift, and go to state 20
    COMPONENTS  shift, and go to state 59
    UPDATE      shift, and go to state 60
    INPUT_      shift, and go to state 61
    '}'         shift, and go to state 62

    dotted_id              go to state 27
    dotted_id_proc         go to state 28
    dotted_id_part         go to state 29
    message_list           go to state 63
    message_prop           go to state 64
    function_def           go to state 65
    property_decl          go to state 66
    type                   go to state 33
    basic_type             go to state 35
    constable_type         go to state 36
    type_ent               go to state 37
    type_ent_handle_asset  go to state 67


State 51

   12 def: ENTITY IDENTIFIER message_block .

    $default  reduce using rule 12 (def)


State 52

   13 def: COMPONENT IDENTIFIER message_block .

    $default  reduce using rule 13 (def)


State 53

    5 using_stmt: USING dotted_id AS . dotted_id ';'

    IDENTIFIER  shift, and go to state 1

    dotted_id       go to state 68
    dotted_id_proc  go to state 28
    dotted_id_part  go to state 29


State 54

    8 dotted_id_proc: dotted_id '.' dotted_id_part .

    $default  reduce using rule 8 (dotted_id_proc)


State 55

   15 def: const_type IDENTIFIER '=' . expr ';'

    IDENTIFIER      shift, and go to state 1
    HASH            shift, and go to state 69
    STRING_LITERAL  shift, and go to state 70
    INT_LITERAL     shift, and go to state 71
    TRUE_           shift, and go to state 72
    FALSE_          shift, and go to state 73
    FLOAT_LITERAL   shift, and go to state 74
    VOID_           shift, and go to state 2
    BOOL_           shift, and go to state 3
    INT_            shift, and go to state 4
    FLOAT_          shift, and go to state 5
    COLOR           shift, and go to state 6
    VEC2            shift, and go to state 7
    VEC3            shift, and go to state 8
    VEC4            shift, and go to state 9
    IVEC2           shift, and go to state 10
    IVEC3           shift, and go to state 11
    IVEC4           shift, and go to state 12
    QUAT            shift, and go to state 13
    MAT3            shift, and go to state 14
    MAT43           shift, and go to state 15
    MAT4            shift, and go to state 16
    ENTITY          shift, and go to state 58
    STRING          shift, and go to state 20
    SELF            shift, and go to state 75
    CREATOR         shift, and go to state 76
    SOURCE          shift, and go to state 77
    TRANSFORM       shift, and go to state 78
    '-'             shift, and go to state 79
    INC             shift, and go to state 80
    DEC             shift, and go to state 81
    '!'             shift, and go to state 82
    '~'             shift, and go to state 83
    '('             shift, and go to state 84
    '$'             shift, and go to state 85

    dotted_id       go to state 86
    dotted_id_proc  go to state 28
    dotted_id_part  go to state 29
    expr            go to state 87
    cond_expr       go to state 88
    literal         go to state 89
    type            go to state 33
    basic_type      go to state 90
    constable_type  go to state 36
    type_ent        go to state 91


State 56

   30 function_def: type_ent_handle_asset IDENTIFIER '(' . param_list ')' block

    IDENTIFIER  shift, and go to state 1
    VOID_       shift, and go to state 2
    BOOL_       shift, and go to state 3
    INT_        shift, and go to state 4
    FLOAT_      shift, and go to state 5
    COLOR       shift, and go to state 6
    VEC2        shift, and go to state 7
    VEC3        shift, and go to state 8
    VEC4        shift, and go to state 9
    IVEC2       shift, and go to state 10
    IVEC3       shift, and go to state 11
    IVEC4       shift, and go to state 12
    QUAT        shift, and go to state 13
    MAT3        shift, and go to state 14
    MAT43       shift, and go to state 15
    MAT4        shift, and go to state 16
    HANDLE_     shift, and go to state 17
    ASSET       shift, and go to state 18
    ENTITY      shift, and go to state 58
    STRING      shift, and go to state 20

    $default  reduce using rule 31 (param_list)

    dotted_id              go to state 27
    dotted_id_proc         go to state 28
    dotted_id_part         go to state 29
    param_list             go to state 92
    type                   go to state 33
    basic_type             go to state 35
    constable_type         go to state 36
    type_ent               go to state 37
    type_ent_handle_asset  go to state 93


State 57

   20 message_prop: HASH . '(' param_list ')' block

    '('  shift, and go to state 94


State 58

  176 type_ent: ENTITY .

    $default  reduce using rule 176 (type_ent)


State 59

   26 message_prop: COMPONENTS . component_block

    '{'  shift, and go to state 95

    component_block  go to state 96


State 60

   27 message_prop: UPDATE . block

    '{'  shift, and go to state 97

    block  go to state 98


State 61

   28 message_prop: INPUT_ . HASH input_block

    HASH  shift, and go to state 99


State 62

   16 message_block: '{' '}' .

    $default  reduce using rule 16 (message_block)


State 63

   17 message_block: '{' message_list . '}'
   19 message_list: message_list . message_prop

    IDENTIFIER  shift, and go to state 1
    HASH        shift, and go to state 57
    VOID_       shift, and go to state 2
    BOOL_       shift, and go to state 3
    INT_        shift, and go to state 4
    FLOAT_      shift, and go to state 5
    COLOR       shift, and go to state 6
    VEC2        shift, and go to state 7
    VEC3        shift, and go to state 8
    VEC4        shift, and go to state 9
    IVEC2       shift, and go to state 10
    IVEC3       shift, and go to state 11
    IVEC4       shift, and go to state 12
    QUAT        shift, and go to state 13
    MAT3        shift, and go to state 14
    MAT43       shift, and go to state 15
    MAT4        shift, and go to state 16
    HANDLE_     shift, and go to state 17
    ASSET       shift, and go to state 18
    ENTITY      shift, and go to state 58
    STRING      shift, and go to state 20
    COMPONENTS  shift, and go to state 59
    UPDATE      shift, and go to state 60
    INPUT_      shift, and go to state 61
    '}'         shift, and go to state 100

    dotted_id              go to state 27
    dotted_id_proc         go to state 28
    dotted_id_part         go to state 29
    message_prop           go to state 101
    function_def           go to state 65
    property_decl          go to state 66
    type                   go to state 33
    basic_type             go to state 35
    constable_type         go to state 36
    type_ent               go to state 37
    type_ent_handle_asset  go to state 67


State 64

   18 message_list: message_prop .

    $default  reduce using rule 18 (message_list)


State 65

   29 message_prop: function_def .

    $default  reduce using rule 29 (message_prop)


State 66

   21 message_prop: property_decl . property_block
   22             | property_decl . '=' expr ';'
   23             | property_decl . ';'

    '='  shift, and go to state 102
    '{'  shift, and go to state 103
    ';'  shift, and go to state 104

    property_block  go to state 105


State 67

   24 message_prop: type_ent_handle_asset . IDENTIFIER '=' expr ';'
   25             | type_ent_handle_asset . IDENTIFIER ';'
   30 function_def: type_ent_handle_asset . IDENTIFIER '(' param_list ')' block
   48 property_decl: type_ent_handle_asset . HASH

    IDENTIFIER  shift, and go to state 106
    HASH        shift, and go to state 107


State 68

    5 using_stmt: USING dotted_id AS dotted_id . ';'
    8 dotted_id_proc: dotted_id . '.' dotted_id_part

    '.'  shift, and go to state 46
    ';'  shift, and go to state 108


State 69

  123 expr: HASH .

    $default  reduce using rule 123 (expr)


State 70

   95 expr: STRING_LITERAL .

    $default  reduce using rule 95 (expr)


State 71

  144 literal: INT_LITERAL .

    $default  reduce using rule 144 (literal)


State 72

  146 literal: TRUE_ .

    $default  reduce using rule 146 (literal)


State 73

  147 literal: FALSE_ .

    $default  reduce using rule 147 (literal)


State 74

  145 literal: FLOAT_LITERAL .

    $default  reduce using rule 145 (literal)


State 75

  134 expr: SELF .

    $default  reduce using rule 134 (expr)


State 76

  135 expr: CREATOR .

    $default  reduce using rule 135 (expr)


State 77

  136 expr: SOURCE .

    $default  reduce using rule 136 (expr)


State 78

  133 expr: TRANSFORM .

    $default  reduce using rule 133 (expr)


State 79

  122 expr: '-' . expr
